samples/_failures_safe/1761204957_df220a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9efe76b4.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_9efe76b4.c:155:20: error: missing terminating " character
  155 |             printf("Node %d: unreachable\n
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9efe76b4.c:155:13: error: expected expression at end of input
  155 |             printf("Node %d: unreachable\n
      |             ^~~~~~
./samples/SAFE/__tmp_9efe76b4.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9efe76b4.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9efe76b4.c:155:13: error: expected declaration or statement at end of input
